test/15-Typing/Signatures/Bad/LargerClosure/Test.ds

y	:: Int %r1 :- Const %r1
y	= 5

succ 	<: Int {read} -> Int {read} -> Int %r2
succ x	= \z -> x + y 
